# cpp

./: .gitignore  README.md  exceptionsStudy
BASE/MyArrayProject/: CMakeLists.txt
BASE/MyArrayProject/include/: CMakeLists.txt
BASE/MyArrayProject/src/: CMakeLists.txt  main.cpp
BASE/OOP/Package/: CMakelists.txt
BASE/Proj/include/: CMakeLists.txt
BASE/Proj/src/: CMakeLists.txt
BASE/Streams/: main.cpp
BASE/Template_unique/: CMakeLists.txt
BASE/Template_unique/include/: CMakeLists.txt
BASE/Template_unique/src/: CMakeLists.txt  main.cpp
BASE/someFol/Try/: CMakeLists.txt
CMDL/: CMakeLists.txt  main.cpp
CPPRev/: CMakeLists.txt  main.cpp  n.xml
CacheSim/: CMakeLists.txt
CacheSim/build2/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
CacheSim/build2/include/: cmake_install.cmake
CacheSim/build2/src/: cmake_install.cmake  main.ilk
CacheSim/include/: CMakeLists.txt
CacheSim/include/cpp/: Associative.cpp  Cache.cpp  DirectMapped.cpp  DirectMappedNoTag.cpp  FIFO_replace.cpp  IdealLRU.cpp  Random_replace.cpp  Sim.cpp
CacheSim/include/hpp/: Associative.hpp  Cache.hpp  DirectMapped.hpp  DirectMappedNoTag.hpp  FIFO_replace.hpp  IdealLRU.hpp  LRU_replace.hpp  Random_replace.hpp  ReplacementPolicy.hpp  Sim.hpp  cacheline.hpp
CacheSim/src/: CMakeLists.txt  main.cpp
Code/: CmakeLists.txt  MinGW Installer.lnk
Code/include/: CMakeLists.txt
Code/src/: CMakeLists.txt  main.cpp
DynamicObjectFileIO/: CMakeLists.txt  main.cpp
FileRevision/: script.ps1
FileRevision/SequentialAccess/: CMakeLists.txt
FileRevision/SequentialAccess/include/: CMakeLists.txt
FileRevision/SequentialAccess/src/: CMakeLists.txt  main.cpp
Listss/: CMakeLists.txt  dList.cpp  dList.hpp  main.cpp  treeT.hpp
PinTools/M_FirstTool/: MyPinTool-clang.sln  MyPinTool-clang.vcxproj  MyPinTool.vcxproj
PinTools/M_FirstTool/obj-intel64/: M_FirstTool.exp
PolyOO/: CMakeLists.txt  main.cpp
PolyOO/includes/: Poly.hpp
PolyOO/src/: Poly.cpp
Revsions/: Spec.cpp  bitsetTrial.cpp
Revsions/Arrays and Related Func Programming/: DieTossDistribution.cpp  MazeGenerator.cpp  PointersandBuiltInArrays.cpp  arrays.cpp  arraysquickie.cpp  palindromes.cpp  ranes.cpp  recursiveArraySort.cpp  vector.cpp
Revsions/C++ 20/: inlinedeclaration_incond.cpp  likey_unlikely.cpp  switch_fallthru.cpp
Revsions/CaesarCipher.cpp/: ceasar.cpp
Revsions/ControlStatements/: Decryption.cpp  HollowSquare.cpp  TwoLargest.cpp  binary_to_decimal.cpp  diamond.cpp  encryption_4_dinum.cpp  factorialwithoutRecursion_FOR.CPP  larestNum.cpp  palindrome.cpp
Revsions/Cryptography/: playFair.cpp
Revsions/Data Structures/: InsertionSort.cpp
Revsions/Exception_Study/: CMakeLists.txt  DivideByZero_derivedException.h  exceptionsStudy.cpp
Revsions/File_I_o/: ReadFilewithOpen.cpp  Tit.txt  Titss.txt  clients.txt  file_sClose.cpp  file_sOpen.cpp  practice.cpp  quoted_Test.cpp
Revsions/Functions/: coinToss.cpp  perfectNumber.cpp  primenumbes.cpp
Revsions/Functions/CrapsGame/: craps.cpp
Revsions/Iterators/: io_iterators.cpp  it.cpp
Revsions/Iterators/Containers/: list.cpp
Revsions/STL_algorithms/: functionObjects.cpp  genFill.cpp
Revsions/STREAMi_o/: test.cpp  unormatted.cpp  width_streami_o.cpp
Revsions/Spectre/: test.c
Revsions/Strings/: SequentialFiles.cpp  StringRev.cpp  replaceMethod.cpp  sequentialFile2.cpp  string_stram.cpp  stringviews.cpp  upeer.cpp
Revsions/Strings/Exercises/: middle.cpp  rot13.cpp
Revsions/Text Formatting/: Width_Precision.cpp
Revsions/Trace Generator_4way/: 4WAY_GenerateTrace.cpp  memFile1.txt  memFile2.txt  memFile3.txt  memFile4.txt
Revsions/timo/: CMakeLists.txt  mian.cpp
Revsions/trying/: main.cpp
SpanRev/: Acc.cpp  Acc.hpp  CMakeLists.txt  main.cpp
T/: CMakeLists.txt  some.cpp
alt/: somefile.cpp
try/: CMakeLists.txt  main.cpp
(+35 files in other folders)
